automation/gitops/openshift-lightspeed-troubleshooting/templates/payments/reporting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service
  namespace: payments
  labels:
    app: reporting-service
    app.kubernetes.io/part-of: payment-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  template:
    metadata:
      labels:
        app: reporting-service
        app.kubernetes.io/part-of: payment-processor
    spec:
      containers:
        - name: reporting-service
          image: quay.io/afalossi/ts01-reporting-service:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: payments
  labels:
    app: reporting-service
    app.kubernetes.io/part-of: payment-processor
spec:
  selector:
    app: reporting-service
  ports:
    - port: 8081
      targetPort: 8081
      name: metrics
